--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,11 +5,11 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type="file"] {
+/* input[type="file"] {
   display: none;
 }
 .custom-file-upload {
   display: inline-block;
   padding: 6px 12px;
   cursor: pointer;
-}
+} */
