add new layout to other users profiles

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,3 +17,18 @@
 .swiper-wrapper {
   width: 710px !important; 
 }
+:root {
+  --main-color: #4a76a8;
+}
+
+.bg-main-color {
+  background-color: var(--main-color);
+}
+
+.text-main-color {
+  color: var(--main-color);
+}
+
+.border-main-color {
+  border-color: var(--main-color);
+}
